--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -5,27 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MMH Dining | Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/common-messages.css">
 </head>
 
 <body>
     <header>
-        <h3><a href="../index.html">MM Hall Dining</a></h3>
+        <h3 class="logo" onclick="window.location.href='home.html'">MM Hall Dining</h3>
     </header>
 
     <main>
         <div class="container">
             <h2>Welcome Back</h2>
             <p id="username"></p>
-            <button id="logoutButton" class="p-4 border-white cursor-pointer logout-btn">Log out</button>
-            
+            <button id="logoutButton" class="btn btn-full logout-btn">Log out</button>
+        </div>
     </main>
-    <script src="../scripts/home.js"></script>
+    <script type="module" src="../scripts/home.js"></script>
 </body>
 
 </html>
