refactor(pages) : Modify css path

--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -10,8 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/styles/signup.css">
-    <link rel="stylesheet" href="/styles/common-messages.css">
+    <link rel="stylesheet" href="../styles/signup.css">
+    <link rel="stylesheet" href="../styles/common-messages.css">
 </head>
 
 <body>
