--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,8 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="../styles/common-messages.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/common-messages.css">
 </head>
 
 <body>
@@ -27,13 +27,13 @@
         <div class="container">
             <div class="carousel">
                 <div class="carousel-item">
-                    <img src="../assets/index/images/mmh3.png" alt="Dining Hall 1" />
+                    <img src="assets/index/images/mmh3.png" alt="Dining Hall 1" />
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/index/images/mmh2.jpg" alt="Dining Hall 2" />
+                    <img src="assets/index/images/mmh2.jpg" alt="Dining Hall 2" />
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/index/images/mmh1.jpg" alt="Dining Hall 3" />
+                    <img src="assets/index/images/mmh1.jpg" alt="Dining Hall 3" />
                 </div>
                 <button class="carousel-controls prev">&#x276e;</button>
                 <button class="carousel-controls next">&#x276f;</button>
@@ -43,7 +43,7 @@
             <button class="btn" onclick="window.location.href='login.html'">Login to continue</button>
         </div>
     </main>
-    <script src="../scripts/index.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
