--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,9 +18,9 @@
     <header>
         <h3 class="logo" onclick="window.location.href='index.html'">MM Hall Dining</h3>
         <nav>
-            <button class="login-button" onclick="window.location.href='signup.html'">Sign Up</button>
+            <button class="login-button" onclick="window.location.href='pages/signup.html'">Sign Up</button>
             <span class="divider">|</span>
-            <button class="login-button" onclick="window.location.href='login.html'">Login</button>
+            <button class="login-button" onclick="window.location.href='pages/login.html'">Login</button>
         </nav>
     </header>
     <main>
@@ -40,7 +40,7 @@
             </div>
             <p>Welcome to</p>
             <h3 class="main-title">Munshi Meherullah Hall Dining Management Application</h3>
-            <button class="btn" onclick="window.location.href='login.html'">Login to continue</button>
+            <button class="btn" onclick="window.location.href='pages/login.html'">Login to continue</button>
         </div>
     </main>
     <script src="scripts/index.js"></script>
