feat(footer) : add footer

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MMH Dining</title>
-       <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/common-messages.css">
 </head>
@@ -48,7 +46,7 @@
                         <button class="carousel-controls next">&#x276f;</button>
                     </div>
                 </div>
-                
+
                 <div class="hero-content">
                     <p class="welcome-text">Welcome to</p>
                     <h1 class="hero-title">Munshi Meherullah Hall Dining Management Application</h1>
@@ -62,12 +60,24 @@
                 <div class="about-card">
                     <h2 class="about-title">About Munshi Meherullah Hall</h2>
                     <p class="about-description">
-                        Munshi Meherullah Hall is one of the prominent residential halls at Jashore University of Science and Technology (JUST). Named after the renowned social reformer Munshi Meherullah, the hall provides accommodation and essential facilities for male students of the university. The hall is dedicated to fostering a supportive and disciplined environment, encouraging academic excellence and personal development among its residents. With modern amenities and a focus on student welfare, Munshi Meherullah Hall plays a vital role in campus life at JUST.
+                        Munshi Meherullah Hall is one of the prominent residential halls at Jashore University of
+                        Science and Technology (JUST). Named after the renowned social reformer Munshi Meherullah, the
+                        hall provides accommodation and essential facilities for male students of the university. The
+                        hall is dedicated to fostering a supportive and disciplined environment, encouraging academic
+                        excellence and personal development among its residents. With modern amenities and a focus on
+                        student welfare, Munshi Meherullah Hall plays a vital role in campus life at JUST.
                     </p>
                 </div>
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer-content">
+            <p class="footer-text">© 2025 MM Hall Dining Management Application | <a class="footer-link"
+                    href="https://github.com/mdraihan27">github.com/mdraihan27</a> | All rights reserved.</p>
+        </div>
+
+    </footer>
     <script src="../scripts/index.js"></script>
 </body>
 
