--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -74,13 +74,14 @@
             </div>
         </div>
     </main>
-    
-    <script type="module" src="../scripts/signup.js"></script>
-</body>
-
-</html>
+      <footer>
+        <div class="footer-content">
+            <p class="footer-text">© 2025 MM Hall Dining Management Application | <a class="footer-link"
+                    href="https://github.com/mdraihan27">github.com/mdraihan27</a> | All rights reserved.</p>
         </div>
-    </main>
+
+    </footer>
+    
     <script type="module" src="../scripts/signup.js"></script>
 </body>
 
