--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -68,6 +68,13 @@
             </div>
         </div>
     </main>
+     <footer>
+        <div class="footer-content">
+            <p class="footer-text">© 2025 MM Hall Dining Management Application | <a class="footer-link"
+                    href="https://github.com/mdraihan27">github.com/mdraihan27</a> | All rights reserved.</p>
+        </div>
+
+    </footer>
     
     <script type="module" src="../scripts/login.js"></script>
 </body>
