feat(profile) : add password reset and update name option in user profile

--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -27,8 +27,8 @@
     <div class="header-content">
       <h3 class="logo" onclick="window.location.href='home.html'">MM Hall Dining</h3>
       <div class="account-bar">
-        <span class="profile-icon"><i class="fas fa-user-circle"></i></span>
-        <p id="account-name"></p>
+        <span class="profile-icon" onclick="window.location.href='profile.html'"><i class="fas fa-user-circle"></i></span>
+        <p id="account-name" onclick="window.location.href='profile.html'" ></p>
         <button id="logoutButton" class="btn logout-btn">Log out</button>
       </div>
     </div>
