--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -84,6 +84,16 @@
                 <p class="action-description">Top up your account balance</p>
               </div>
             </div>
+
+            <div class="action-card" id="transferTokenBtn">
+              <div class="action-icon">
+                <i class="fas fa-wallet"></i>
+              </div>
+              <div class="action-content">
+                <h4 class="action-title">Transfer Token</h4>
+                <p class="action-description">Transfer your tokens to another user</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
