feat(dining record) :Implemented dining record access feature

--- a/frontend/pages/buy-token.html
+++ b/frontend/pages/buy-token.html
@@ -31,7 +31,7 @@
                 <p class="page-subtitle">Select your meals for tomorrow</p>
                 <div class="form-date" id="nextDayDate"></div>
             </div>
-            
+
             <div id="meal-info-container">
                 <div class="meal-info-card">
                     <div class="meal-header">
@@ -68,12 +68,14 @@
                                 <p class="token-type-label">Token Type:</p>
                                 <div class="radio-options">
                                     <label class="radio-option">
-                                        <input type="radio" name="dinner-token-type" id="dinner-token-type-chicken" value="chicken" class="styled-radio">
+                                        <input type="radio" name="dinner-token-type" id="dinner-token-type-chicken"
+                                            value="chicken" class="styled-radio">
                                         <span class="radio-checkmark"></span>
                                         <span>Chicken</span>
                                     </label>
                                     <label class="radio-option">
-                                        <input type="radio" name="dinner-token-type" id="dinner-token-type-fish" value="fish" class="styled-radio">
+                                        <input type="radio" name="dinner-token-type" id="dinner-token-type-fish"
+                                            value="fish" class="styled-radio">
                                         <span class="radio-checkmark"></span>
                                         <span>Fish</span>
                                     </label>
@@ -93,12 +95,14 @@
                                 <p class="token-type-label">Token Type:</p>
                                 <div class="radio-options">
                                     <label class="radio-option">
-                                        <input type="radio" name="lunch-token-type" id="lunch-token-type-chicken" value="chicken" class="styled-radio">
+                                        <input type="radio" name="lunch-token-type" id="lunch-token-type-chicken"
+                                            value="chicken" class="styled-radio">
                                         <span class="radio-checkmark"></span>
                                         <span>Chicken</span>
                                     </label>
                                     <label class="radio-option">
-                                        <input type="radio" name="lunch-token-type" id="lunch-token-type-fish" value="fish" class="styled-radio">
+                                        <input type="radio" name="lunch-token-type" id="lunch-token-type-fish"
+                                            value="fish" class="styled-radio">
                                         <span class="radio-checkmark"></span>
                                         <span>Fish</span>
                                     </label>
@@ -116,6 +120,13 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer-content">
+            <p class="footer-text">© 2025 MM Hall Dining Management Application | <a class="footer-link"
+                    href="https://github.com/mdraihan27">github.com/mdraihan27</a> | All rights reserved.</p>
+        </div>
+
+    </footer>
     <script type="module" src="../scripts/buy-token.js"></script>
     <script>
         // Set next day's date in the page header
