--- a/frontend/pages/add-balance.html
+++ b/frontend/pages/add-balance.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MMH Dining | My Tokens</title>
+    <title>MMH Dining | Transfer Token</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/my-tokens.css">
+    <link rel="stylesheet" href="../styles/add-balance.css">
     <link rel="stylesheet" href="../styles/common-messages.css">
 </head>
 
@@ -27,28 +27,31 @@
     <main>
         <div class="page-wrapper">
             <div class="page-header">
-                <h2 class="page-title">My Dining Tokens</h2>
-                <p class="page-subtitle">View and manage your purchased tokens</p>
+                <h2 class="page-title">Add Balance</h2>
+
             </div>
 
-            <div class="tokens-container">
-                <div id="token-container" class="tokens-grid">
-                    <!-- Tokens will be loaded here by JavaScript -->
-                </div>
+            <div>
+                <form id="addBalanceForm" class="add-balance-form">
+                    <div class="form-group">
+                        <label for="amount" class="form-label">Amount to Add</label>
+                        <input type="text" id="amount" name="amount" class="form-input" placeholder="Enter amount"
+                            required>
+                        <label for="bkash" class="form-label">BKASH NUMBER</label>
 
-                <div class="no-tokens" id="no-tokens" style="display: none;">
-                    <div class="no-tokens-icon">
-                        <svg width="80" height="80" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2" fill="none" />
-                            <path d="M8 12h8" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
-                            <path d="M12 8v8" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
-                        </svg>
+                        <input type="text" id="bkash" name="bkash" class="form-input"
+                            placeholder="Enter your bKash number" required>
+                        <button type="submit" class="btn" id="submit-button">Submit</button>
                     </div>
-                    <h3>No Tokens Found</h3>
-                    <p>You haven't purchased any dining tokens yet. Get started by purchasing your first token!</p>
-                    <a href="buy-token.html" class="btn-secondary">Purchase Tokens</a>
-                </div>
+                </form>
+
             </div>
+
+
+
+
+
+
         </div>
     </main>
     <footer>
@@ -58,7 +61,8 @@
         </div>
 
     </footer>
-    <script type="module" src="../scripts/my-tokens.js"></script>
+    <script type="module" src="../scripts/add-balance.js"></script>
+
 </body>
 
 </html>
